--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.15.0",
     "puppeteer": "^22.12.0",
+    "random-forest": "^0.0.7",
     "zod": "^3.22.4"
   }
 }
